# C9MagangBanyubramanta_Hadryan-Rizky-Dimas-Saputraa

./: README.md
deteksi_warna/: deteksi_warna.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller_node.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ControllerCommand.msg  Detect.msg
src/interfaces/srv/: Add.srv
src/opencv_integration/: CMakeLists.txt  package.xml
src/opencv_integration/src/: video_publisher_node.cpp
src/serial_bridge/: CMakeLists.txt  package.xml
src/serial_bridge/src/: serial_bridge_node.cpp
src/submarine_sim/: CMakeLists.txt  package.xml
src/submarine_sim/config/: joystick.yaml
src/submarine_sim/description/: camera.xacro  inertial.xacro  robot.xacro
src/submarine_sim/launch/: sim.launch.py
src/submarine_sim/meshes/: badan_kapal.dae  badan_kapal.stl
src/submarine_sim/src/: rov_controller.cpp
src/submarine_sim/worlds/: underwater.world
src/vision_ov_yolo/: CMakeLists.txt  package.xml
src/vision_ov_yolo/include/vision_ov_yolo/: yolo_engine.hpp
src/vision_ov_yolo/models/: best.onnx
src/vision_ov_yolo/src/: yolo_engine.cpp  yolo_node.cpp
src/yolo_msgs/: CMakeLists.txt  package.xml
src/yolo_msgs/msg/: Detection.msg
